[gd_scene load_steps=9 format=3 uid="uid://78e6lxx8puvw"]

[ext_resource type="Theme" uid="uid://c7t12d7i2lh4c" path="res://theme.tres" id="1_ig7tw"]
[ext_resource type="Script" uid="uid://x0eq5slua18f" path="res://main.gd" id="2_kek77"]
[ext_resource type="Texture2D" uid="uid://f8lbxtfml1ki" path="res://ui/icons/autorenew_64dp_E3E3E3_FILL0_wght400_GRAD0_opsz48.svg" id="2_lquwl"]
[ext_resource type="Texture2D" uid="uid://c1cuu1ujil3cn" path="res://ui/icons/photo_size_select_small_64dp_E3E3E3_FILL0_wght400_GRAD0_opsz48.svg" id="3_7mycd"]
[ext_resource type="Texture2D" uid="uid://ds1on1jex6b2t" path="res://ui/icons/speed_64dp_E3E3E3_FILL0_wght400_GRAD0_opsz48.svg" id="4_272bh"]
[ext_resource type="Texture2D" uid="uid://b0pe3t8eyp1m0" path="res://ui/icons/replace_audio_64dp_E3E3E3_FILL0_wght400_GRAD0_opsz48.svg" id="5_5vw27"]
[ext_resource type="Texture2D" uid="uid://e03h7m8yt8r3" path="res://ui/icons/settings_64dp_E3E3E3_FILL0_wght400_GRAD0_opsz48.svg" id="6_7mycd"]
[ext_resource type="Script" uid="uid://gbe4swybcoqx" path="res://ffmpeg_funcs.gd" id="9_4c57u"]

[node name="Main" type="Control" node_paths=PackedStringArray("input_file_path", "convert_format_option")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_ig7tw")
script = ExtResource("2_kek77")
input_file_path = NodePath("MarginContainer/VBoxContainer/Header/FilePath")
convert_format_option = NodePath("MarginContainer/VBoxContainer/VideoFuncs/Convert/Option")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.23921569, 0.23921569, 0.23921569, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Header" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Header"]
layout_mode = 2
text = "Input file:"

[node name="FilePath" type="Button" parent="MarginContainer/VBoxContainer/Header"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "C:/___/______.___"
alignment = 0

[node name="FileDialog" type="FileDialog" parent="MarginContainer/VBoxContainer/Header/FilePath"]
oversampling_override = 1.0
title = "Open a File"
position = Vector2i(0, 36)
size = Vector2i(653, 360)
ok_button_text = "Select"
dialog_hide_on_ok = true
file_mode = 0
access = 2
use_native_dialog = true

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="VideoFuncs" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Convert" type="HBoxContainer" parent="MarginContainer/VBoxContainer/VideoFuncs"]
layout_mode = 2

[node name="Function" type="Button" parent="MarginContainer/VBoxContainer/VideoFuncs/Convert"]
layout_mode = 2
size_flags_horizontal = 3
text = "Convert"
icon = ExtResource("2_lquwl")

[node name="Option" type="OptionButton" parent="MarginContainer/VBoxContainer/VideoFuncs/Convert"]
layout_mode = 2
size_flags_horizontal = 3

[node name="FAQ" type="Button" parent="MarginContainer/VBoxContainer/VideoFuncs/Convert"]
layout_mode = 2
text = "?"

[node name="Compress" type="HBoxContainer" parent="MarginContainer/VBoxContainer/VideoFuncs"]
layout_mode = 2

[node name="Function" type="Button" parent="MarginContainer/VBoxContainer/VideoFuncs/Compress"]
layout_mode = 2
size_flags_horizontal = 3
text = "Compress"
icon = ExtResource("3_7mycd")

[node name="Option" type="LineEdit" parent="MarginContainer/VBoxContainer/VideoFuncs/Compress"]
layout_mode = 2
size_flags_horizontal = 3

[node name="FAQ" type="Button" parent="MarginContainer/VBoxContainer/VideoFuncs/Compress"]
layout_mode = 2
text = "?"

[node name="Edit FPS" type="HBoxContainer" parent="MarginContainer/VBoxContainer/VideoFuncs"]
layout_mode = 2

[node name="Function" type="Button" parent="MarginContainer/VBoxContainer/VideoFuncs/Edit FPS"]
layout_mode = 2
size_flags_horizontal = 3
text = "Edit FPS"
icon = ExtResource("4_272bh")

[node name="Option" type="LineEdit" parent="MarginContainer/VBoxContainer/VideoFuncs/Edit FPS"]
layout_mode = 2
size_flags_horizontal = 3

[node name="FAQ" type="Button" parent="MarginContainer/VBoxContainer/VideoFuncs/Edit FPS"]
layout_mode = 2
text = "?"

[node name="Extract Audio" type="HBoxContainer" parent="MarginContainer/VBoxContainer/VideoFuncs"]
layout_mode = 2

[node name="Function" type="Button" parent="MarginContainer/VBoxContainer/VideoFuncs/Extract Audio"]
layout_mode = 2
size_flags_horizontal = 3
text = "Extract audio"
icon = ExtResource("5_5vw27")

[node name="FAQ" type="Button" parent="MarginContainer/VBoxContainer/VideoFuncs/Extract Audio"]
layout_mode = 2
text = "?"

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Bottom" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="AdvancedMode" type="Button" parent="MarginContainer/VBoxContainer/Bottom"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Advanced mode"

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Bottom"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
theme_override_font_sizes/font_size = 16
text = "WRecode"
horizontal_alignment = 1
vertical_alignment = 2

[node name="Settings" type="Button" parent="MarginContainer/VBoxContainer/Bottom"]
layout_mode = 2
icon = ExtResource("6_7mycd")

[node name="Window" type="Window" parent="MarginContainer/VBoxContainer/Bottom/Settings"]
disable_3d = true
oversampling_override = 1.0
title = "Options"
initial_position = 1
size = Vector2i(400, 500)
visible = false
unresizable = true
always_on_top = true
minimize_disabled = true
maximize_disabled = true

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/Bottom/Settings/Window"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Bottom/Settings/Window/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Bottom/Settings/Window/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Themes"

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer/Bottom/Settings/Window/MarginContainer/VBoxContainer"]
layout_mode = 2
columns = 3

[node name="Dark" type="Button" parent="MarginContainer/VBoxContainer/Bottom/Settings/Window/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Green" type="Button" parent="MarginContainer/VBoxContainer/Bottom/Settings/Window/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="White" type="Button" parent="MarginContainer/VBoxContainer/Bottom/Settings/Window/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Pink" type="Button" parent="MarginContainer/VBoxContainer/Bottom/Settings/Window/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CheckBox" type="CheckBox" parent="MarginContainer/VBoxContainer/Bottom/Settings/Window/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Decrease audio bitrate
while compress video"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Bottom/Settings/Window/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Bottom/Settings/Window/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Lang"

[node name="OptionButton" type="OptionButton" parent="MarginContainer/VBoxContainer/Bottom/Settings/Window/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="ProgressBar" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -350.0
offset_top = 150.0
offset_right = 350.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(350, 50)

[node name="MarginContainer" type="MarginContainer" parent="ProgressBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ProgressBar/MarginContainer"]
layout_mode = 2

[node name="ProgressBar" type="ProgressBar" parent="ProgressBar/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 2

[node name="Label" type="Label" parent="ProgressBar/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Process [file.___] | output"

[node name="ffmpeg funcs" type="Node" parent="."]
script = ExtResource("9_4c57u")

[connection signal="pressed" from="MarginContainer/VBoxContainer/Header/FilePath" to="." method="_select_file_pressed"]
[connection signal="file_selected" from="MarginContainer/VBoxContainer/Header/FilePath/FileDialog" to="." method="_on_file_selected"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VideoFuncs/Convert/Function" to="." method="_convert_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VideoFuncs/Compress/Function" to="." method="_compress_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VideoFuncs/Edit FPS/Function" to="." method="_editfps_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VideoFuncs/Extract Audio/Function" to="." method="_extractaudio_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Bottom/Settings" to="." method="_on_settings_pressed"]
